--- a/build.gradle
+++ b/build.gradle
@@ -22,14 +22,28 @@ repositories {
 }
 
 dependencies {
+    //thymeleaf
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    //jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    //spring security
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    //web
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    //validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    //lombok
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
+    //mysql
+    runtimeOnly 'com.mysql:mysql-connector-j'
+    //test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    //jwt
+    compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 }
 
 tasks.named('test') {
